--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,52 @@
 * {
     padding: 0;
-    margin: 5px;
+    margin: 0;
     box-sizing: border-box;
 }
 
 .container {
+    font-family: sans-serif;
     display: grid;
-    grid-template-columns: repeat(4,1fr) ;
+    padding-right: 14%;
+    padding-left: 14%;
+    grid-template-columns: 50% 50%;
     grid-auto-rows: minmax();
-    grid-template-areas: 
-    "box-1 box-1 box-1 box-3"
-    "box-2 box-4 box-4 box-4 "
-    "box-5 box-5 box-6 box-6"
-    "box-5 box-5 box-7 box-7";
     
 }
 
-.box-1 {
-    border-radius: 1%;
-    background-color: gray;
-    grid-area: box-1;
+.box1 {
+    grid-column: 1/span 2;
+    text-align: center;
+    background: linear-gradient(360deg, rgb(10, 10, 10), rgb(32, 60, 92));
+    color: white;
 }
 
-.Myphoto {
-    position: flex;
-    width: 150px;
-    clip-path: circle(30%);
-   
+.ProfileImage {
+    width: 120px;
+    height: 120px;
+    margin: 20px;
+    border-radius: 50%;
+    border: 2px ridge white;
+}
+.ProfileIcons {
+    margin: 10px;
+    padding-top: 20px;
+    font-size: 50px;
 }
 
-.box-2 {
-    border-radius: 1%;
-    background-color: gray;
-    grid-area: box-2;
+a {
+    padding-left: 10px;
+    color: white;
 }
 
-.box-3 {
-    border-radius: 1%;
-    background-color: gray;
-    grid-area: box-3;
+.box2 {
+    grid-column: 1/span 2;
+    text-align: justify;
+    background: linear-gradient(45deg,rgba(135, 182, 235, 0.466), rgba(180, 180, 180, 0.377));
+    line-height: 1.4;
+    font-size: 17px;
 }
 
-.box-4 {
-    border-radius: 1%;
-    background-color: gray;
-    grid-area: box-4;
+.box2 p {
+    padding-left: 15px;
 }
-
-.box-5 {
-    border-radius: 1%;
-    background-color: gray;
-    grid-area: box-5;
-}
-
-.box-6 {
-    border-radius: 1%;
-    background-color: gray;
-    grid-area: box-6;
-}
-
-.box-7 {
-    border-radius: 1%;
-    background-color: gray;
-    grid-area: box-7;
-}
-
-
